examples/neg/high_loop_grow/bob.oio
BOB

channel ALICE/A1@{H} : int@{H};

channel ALICE/A2@{H} : int@{H};

var bobs_secret : int@{H} = 0;

START@{} (i : int@{}) {
    send(ALICE/A1, bobs_secret);
}

B1@{H} (secret : int@{H}) {
    oblif 0
    then send(ALICE/A1, secret);
    else skip;
}

B2@{H} (secret : int@{H}) {
    print("BOB/B2 received", secret);
    send(ALICE/A2, secret);
}
